# the-anvil-framework

./: .gitignore  GITHUB_SETUP.md  README.md  pyproject.toml
adapters/: __init__.py  poliastro_orbits.py  pykep_trajectories.py
docs/: ADAPTER_GUIDE.md  ANVIL_DOCUMENTATION.md  ANVIL_GUIDE.html  ANVIL_WIKI.html  NASA_CEA_GUIDE.md  build_wiki.py  embed_plots.py
docs/wiki/: 01_quickstart.md  02_quantity.md  03_units.md  04_relation.md  05_system.md  06_solvers.md  07_registry.md  08_project.md  09_builtin_rsqs.md  10_adapters.md  11_sweep_sensitivity.md  12_visualization.md  13_databases.md  14_limits.md  15_advanced.md  16_decomp.md  17_abel.md  18_cfd.md  19_signal_processing.md  index.md
examples/: bugs_29th.md  cea_example.py  ex01_rocket_nozzle.py  ex02_heat_exchanger.py  ex03_orbital_transfer.py  ex04_beam_analysis.py  ex05_wind_tunnel.py  ex06_two_stage_rocket.py  ex07_combustion.py  ex08_research_workflow.py  ex09_cantera_cea.py  ex10_detonation.py  ex11_ode_solvers.py  ex12_project_registry.py  ex13_controls_analysis.py  ex14_materials_fatigue.py  ex15_aero_performance.py  ex16_jupyter_display.ipynb  ex16_optimization.py  ex17_rayleigh_flow.py  ex18_decomp.py  ex19_abel.py  ex20_space_dynamics.py  ex21_poliastro_adapter.py  ex22_pykep_adapter.py  ex_cfd_subsonic_bump.py  ex_cfd_supersonic_ramp.py  ex_cfd_wedge.py  ex_fenics_adapter.py  ex_ode_patterns.py  ex_openfoam_adapter.py  ex_openmdo_adapter.py  ex_orifice_pressure_solver.py  ex_project_workflow.py  ex_pynastran_adapter.py  ex_showcase_v2.py  ex_signal_processing.py  ex_su2_adapter.py  ex_surrogate_adapter.py  ex_xfoil_adapter.py  (+5 more)
rsqs/: rayleigh_flow.py
src/anvil/: __init__.py  adapter.py  compat.py  decomp.py  help_.py  inspect.py  monitor.py  project.py  quantity.py  relation.py  seed.py  system.py  units.py  viz.py  watchdog.py
src/anvil/adapters/: __init__.py  cantera_thermo.py  fenics_fem.py  nasa_cea_detonation.py  openfoam_cfd.py  openmdo_wrap.py  poliastro_orbits.py  pykep_trajectories.py  pynastran_fem.py  su2_aero.py  surrogate_models.py  xfoil_airfoil.py
src/anvil/cfd/: __init__.py  bc.py  flux.py  io.py  mesh.py  solver.py  viz.py
src/anvil/db/: __init__.py  properties.py
src/anvil/registry/: __init__.py  loader.py  namespace.py  store.py
src/anvil/solvers/: __init__.py
tests/: test_v03.py  test_v04.py
