[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-framework"
version = "1.3.0"
description = "From equations to engineering tools. A computation framework for researchers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Anvil Contributors"}]
keywords = ["engineering", "computation", "simulation", "aerospace", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
viz       = ["matplotlib>=3.7"]
poliastro = ["poliastro>=0.17", "astropy>=5.0"]
pykep     = ["pykep>=2.6"]
cantera   = ["cantera>=3.0"]
# CFD adapters
xfoil     = []                                 # XFOIL: CLI binary, no pip package
su2       = []                                 # SU2_CFD: binary from su2code.github.io
openfoam  = []                                 # OpenFOAM: OS package, not pip
# FEM adapters
fenics    = ["fenics-dolfinx", "mpi4py", "petsc4py"]
nastran   = ["pyNASTRAN>=1.3"]
# MDO adapter
openmdao  = ["openmdao>=3.27"]
# Surrogate adapters
surrogate = ["scikit-learn>=1.3"]
gpy       = ["GPy>=1.10"]
# Base adapter set (space/propulsion)
adapters  = ["poliastro>=0.17", "astropy>=5.0", "pykep>=2.6"]
gpu       = ["jax[cuda12]"]
dev       = ["pytest>=7.0", "pytest-cov", "matplotlib>=3.7"]
all       = [
    "matplotlib>=3.7",
    "poliastro>=0.17", "astropy>=5.0", "pykep>=2.6",
    "pyNASTRAN>=1.3",
    "openmdao>=3.27",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
